RESOLVED FIXED62915
Focus ring is rendered incorrectly for a block with -webkit-writing-mode
https://bugs.webkit.org/show_bug.cgi?id=62915
Summary Focus ring is rendered incorrectly for a block with -webkit-writing-mode
Ryosuke Niwa
Reported 2011-06-17 16:07:14 PDT
See the attached demo. Focus ring extends to the right at several places and is cut off oddly.
Attachments
demp (436 bytes, text/html)
2011-06-17 16:07 PDT, Ryosuke Niwa
no flags
Proposed patch (23.76 KB, patch)
2011-08-30 14:48 PDT, Kulanthaivel Palanichamy
no flags
Ryosuke Niwa
Comment 1 2011-06-17 16:07:29 PDT
Kulanthaivel Palanichamy
Comment 2 2011-08-30 14:48:16 PDT
Created attachment 105702 [details] Proposed patch
WebKit Review Bot
Comment 3 2011-09-01 12:37:59 PDT
Comment on attachment 105702 [details] Proposed patch Clearing flags on attachment: 105702 Committed r94331: <http://trac.webkit.org/changeset/94331>
WebKit Review Bot
Comment 4 2011-09-01 12:38:03 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.