Focus ring is rendered incorrectly for a block with -webkit-writing-mode https://bugs.webkit.org/show_bug.cgi?id=62915

Patch by Kulanthaivel Palanichamy <kulanthaivel@codeaurora.org> on 2011-09-01
Reviewed by Simon Fraser.

Source/WebCore:

RenderBlock::addFocusRingRects() should consider physical box position and
dimension instead of logical values for focus ring rects calculation.

Test: fast/css/focus-ring-multiline-writingmode-vertical.html

* rendering/RenderBlock.cpp:
(WebCore::RenderBlock::addFocusRingRects):

LayoutTests:

* fast/css/focus-ring-multiline-writingmode-vertical.html: Added.
* platform/qt-linux/fast/css/focus-ring-multiline-writingmode-vertical-expected.png: Added.
* platform/qt-linux/fast/css/focus-ring-multiline-writingmode-vertical-expected.txt: Added.

Canonical link: https://commits.webkit.org/83240@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@94331 268f45cc-cd09-0410-ab3c-d52691b4dbfc